--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -162,4 +162,138 @@
         </div>
         </div>
     </section>
+    <!-- Footer area-->
+    <div class="footer-area">
+
+        <div class=" footer">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                        <div class="single-footer">
+                            <h4>About us </h4>
+                            <div class="footer-title-line"></div>
+
+                            <img src="{%static 'rs/assets/img/footer-logo.png'%}" alt="" class="wow pulse" data-wow-delay="1s">
+                            <p>Nos encontras aqui</p>
+                            <ul class="footer-adress">
+                                <li><i class="pe-7s-map-marker strong"> </i> san luis 3233</li>
+                                <li><i class="pe-7s-mail strong"> </i> test@test.com</li>
+                                <li><i class="pe-7s-call strong"> </i> +3412557997</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                        <div class="single-footer">
+                            <h4>Quick links </h4>
+                            <div class="footer-title-line"></div>
+                            <ul class="footer-menu">
+                                <li><a href="{% url 'index'%}">Home</a>  </li> 
+                                <li><a href="{% url 'listings'%}">Propiedades </a></li> 
+                                <li><a href="{% url 'contact2'%}">Contacto</a></li> 
+                                <li><a href="#faq">faq</a>  </li> 
+                                <li><a href="#">Login </a>  </li> 
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                        <div class="single-footer">
+                            <h4>Noticias</h4>
+                            <div class="footer-title-line"></div>
+                            <ul class="footer-blog">
+                                <li>
+                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                        <a href="single.html">
+                                            <img src="{%static 'rs/assets/img/demo/small-proerty-2.jpg'%}">
+                                        </a>
+                                        <span class="blg-date">12-12-2016</span>
+
+                                    </div>
+                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                        <h6> <a href="single.html">Vendedores </a></h6> 
+                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                    </div>
+                                </li> 
+
+                                <li>
+                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                        <a href="single.html">
+                                            <img src="{%static 'rs/assets/img/demo/small-proerty-2.jpg'%}">
+                                        </a>
+                                        <span class="blg-date">12-12-2016</span>
+
+                                    </div>
+                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                        <h6> <a href="single.html">Novedades </a></h6> 
+                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                    </div>
+                                </li> 
+
+                                <li>
+                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                        <a href="single.html">
+                                            <img src="{%static 'rs/assets/img/demo/small-proerty-2.jpg'%}">
+                                        </a>
+                                        <span class="blg-date">12-12-2016</span>
+
+                                    </div>
+                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                        <h6> <a href="single.html">Servicios </a></h6> 
+                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                    </div>
+                                </li> 
+
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                        <div class="single-footer news-letter">
+                            <h4>Matenete en contacto</h4>
+                            <div class="footer-title-line"></div>
+                            <p>Suscribite a nuestro boletin y recibi las actualizaciones de las nuevas propiedaes agredas a nuestro sistema</p>
+
+                            <form>
+                                <div class="input-group">
+                                    <input class="form-control" type="text" placeholder="E-mail ... ">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-primary subscribe" type="button"><i class="pe-7s-paper-plane pe-2x"></i></button>
+                                    </span>
+                                </div>
+                                <!-- /input-group -->
+                            </form> 
+
+                            <div class="social pull-right"> 
+                                <ul>
+                                    <li><a class="wow fadeInUp animated" href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s"><i class="fa fa-dribbble"></i></a></li>
+                                </ul> 
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-copy text-center">
+            <div class="container">
+                <div class="row">
+                   
+                    <div class="bottom-menu pull-right"> 
+                        <ul> 
+                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s">Home</a></li>
+                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s">Propiedades</a></li>
+                            <li><a class="wow fadeInUp animated" href="#faq" data-wow-delay="0.4s">Faq</a></li>
+                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s">Contacto</a></li>
+                        </ul> 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 {% endblock %}
