--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -744,7 +744,7 @@
                                 <p> Te ayudamos a encontrar la mejor propiedad para cumplir tu sueño</p>                                        
                             </div>
                             <div class="asks-first-arrow">
-                                <a href="properties.html"><span class="fa fa-angle-right"></span></a>
+                                <a href="{% url 'listings'%}"><span class="fa fa-angle-right"></span></a>
                             </div>
                         </div>
                     </div>
@@ -758,7 +758,7 @@
                                 <p> Contamos con los mejores vendedores y le daremos prioridad a tu necesidad</p>
                             </div>
                             <div class="asks-first-arrow">
-                                <a href="properties.html"><span class="fa fa-angle-right"></span></a>
+                                <a href="{% url 'listings'%}"><span class="fa fa-angle-right"></span></a>
                             </div>
                         </div>
                     </div>
@@ -782,11 +782,11 @@
                                 <div class="footer-title-line"></div>
 
                                 <img src="{%static 'rs/assets/img/footer-logo.png'%}" alt="" class="wow pulse" data-wow-delay="1s">
-                                <p>Lorem ipsum dolor cum necessitatibus su quisquam molestias. Vel unde, blanditiis.</p>
+                                <p>Nos encontras aqui</p>
                                 <ul class="footer-adress">
-                                    <li><i class="pe-7s-map-marker strong"> </i> 9089 your adress her</li>
-                                    <li><i class="pe-7s-mail strong"> </i> email@yourcompany.com</li>
-                                    <li><i class="pe-7s-call strong"> </i> +1 908 967 5906</li>
+                                    <li><i class="pe-7s-map-marker strong"> </i> san luis 3233</li>
+                                    <li><i class="pe-7s-mail strong"> </i> test@test.com</li>
+                                    <li><i class="pe-7s-call strong"> </i> +3412557997</li>
                                 </ul>
                             </div>
                         </div>
@@ -795,18 +795,17 @@
                                 <h4>Quick links </h4>
                                 <div class="footer-title-line"></div>
                                 <ul class="footer-menu">
-                                    <li><a href="properties.html">propiedaes</a>  </li> 
-                                    <li><a href="#">Services</a>  </li> 
-                                    <li><a href="submit-property.html">Submit property </a></li> 
-                                    <li><a href="contact.html">Contact us</a></li> 
-                                    <li><a href="faq.html">fqa</a>  </li> 
-                                    <li><a href="faq.html">Terms </a>  </li> 
+                                    <li><a href="{% url 'index'%}">Home</a>  </li> 
+                                    <li><a href="{% url 'listings'%}">Propiedades </a></li> 
+                                    <li><a href="{% url 'contact2'%}">Contacto</a></li> 
+                                    <li><a href="#faq">faq</a>  </li> 
+                                    <li><a href="#">Login </a>  </li> 
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 wow fadeInRight animated">
                             <div class="single-footer">
-                                <h4>Last News</h4>
+                                <h4>Noticias</h4>
                                 <div class="footer-title-line"></div>
                                 <ul class="footer-blog">
                                     <li>
@@ -818,7 +817,7 @@
 
                                         </div>
                                         <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
-                                            <h6> <a href="single.html">Add news functions </a></h6> 
+                                            <h6> <a href="single.html">Vendedores </a></h6> 
                                             <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
                                         </div>
                                     </li> 
@@ -832,7 +831,7 @@
 
                                         </div>
                                         <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
-                                            <h6> <a href="single.html">Add news functions </a></h6> 
+                                            <h6> <a href="single.html">Novedades </a></h6> 
                                             <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
                                         </div>
                                     </li> 
@@ -846,7 +845,7 @@
 
                                         </div>
                                         <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
-                                            <h6> <a href="single.html">Add news functions </a></h6> 
+                                            <h6> <a href="single.html">Servicios </a></h6> 
                                             <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
                                         </div>
                                     </li> 
@@ -894,9 +893,9 @@
                         <div class="bottom-menu pull-right"> 
                             <ul> 
                                 <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s">Home</a></li>
-                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s">Property</a></li>
-                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s">Faq</a></li>
-                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s">Contact</a></li>
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s">Propiedades</a></li>
+                                <li><a class="wow fadeInUp animated" href="#faq" data-wow-delay="0.4s">Faq</a></li>
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s">Contacto</a></li>
                             </ul> 
                         </div>
                     </div>
