--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
-                <h1 class="display-4">About BT Real Estate</h1>
+                <h1 class="display-4">Acerca de INGENIA SOLUCIONES INMOBILIARIAS/h1>
                 <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <a href="{% url 'index' %}">
                     <i class="fas fa-home"></i> Home</a>
             </li>
-            <li class="breadcrumb-item active"> About</li>
+            <li class="breadcrumb-item active"> Acerca De</li>
             </ol>
         </nav>
         </div>
@@ -99,7 +99,7 @@
         <div class="container">
         <div class="row">
             <div class="col-md-8">
-            <h2>We Search For The Perfect Home</h2>
+            <h2>Te buscamos la casa perfecta para vos</h2>
             <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
             <img src="{% static 'img/about.jpg' %}" alt="">
             <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
@@ -113,7 +113,7 @@
                         <div class="card">
                             <img class="card-img-top" src="{{ realtor.photo.url }}" alt="Seller of the month">
                         <div class="card-body">
-                        <h5 class="card-title">Seller Of The Month</h5>
+                        <h5 class="card-title">Vendedor del mes</h5>
                         <h6 class="text-secondary">{{ realtor.name }}</h6>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
                             content.
@@ -131,7 +131,7 @@
 
     <!-- Work -->
     <section id="work" class="bg-dark text-white text-center">
-        <h2 class="display-4">We Work For You</h2>
+        <h2 class="display-4">Trabajamos para vos</h2>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
         <hr>
         <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
@@ -140,7 +140,7 @@
     <!-- Team -->
     <section id="team" class="py-5">
         <div class="container">
-        <h2 class="text-center">Our Team</h2>
+        <h2 class="text-center">Nuestro Equipo</h2>
         <div class="row text-center">
             {% if realtors %}
                 {% for realtor in realtors %}
