--- a/btre/static/rs/assets/css/responsive.css
+++ b/btre/static/rs/assets/css/responsive.css
@@ -142,6 +142,11 @@
     }
     .search-form{
         padding: 15px;
+        padding: 15px;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     }
     .search-form .form-inline .form-group {
         width: 100%; 
